# moonshine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh
adapters/claude-code/: .mcp.json  README.md
adapters/generic/: README.md  watcher.js
adapters/openclaw/: HOOK.md  README.md  handler.ts
adapters/postgres/: README.md  mem_pg.py  migrate.py  schema.sql
core/: conftest.py  mcp-server.py  mem  mem.py  pyproject.toml  reranker.py  schema.sql  test_integration.py  test_mcp_server.py  test_reranker.py  test_schema.py  test_search.py
docs/: architecture.md  competitive-landscape.md  maintenance.md  setup-guide.md
evals/longmemeval/: evaluate.js  harness.js  search_helper.py
observer/: PROMPTS.md  db.js  observe.js  package.json  reflect.js
templates/: MEMORY.md  SOUL.md  USER.md
